# SegmentOpenvino

./: README.md
build_ov2020/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  segment
build_ov2021/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  segment
models/: model.mapping  model_fixsize_retrain.mapping  model_opset10.mapping  model_opset10.xml  model_opset11.xml  model_round4_fixsize.mapping  model_round4_fixsize.xml
models_bk/: model_fixsize_retrain.xml
models_ov2020/: model_opset10.mapping  model_opset10.xml
src/: main.cpp
tools/: bisenetv2.py  export_onnx.py  miscs.py
